@@ -168,7 +168,6 @@ static const typedata item_types[] = {
     {PEACEMAKER, "peacemaker", "peacemakers", 0, 0},
     {GEM, "gem", "gems", SK_JEWELER, 0},
     {FIREWALL, "firewall", "firewalls", 0, 0},
-    {ANVIL, "anvil", "anvils", 0, 0},
     {CHECK_INV, "inventory checker", "inventory checkers", 0, 0},
     {MOOD_FLOOR, "mood floor", "mood floors", 0, 0},
     {EXIT, "exit", "exits", 0, 0},
@@ -181,17 +180,13 @@ static const typedata item_types[] = {
     {INORGANIC, "inorganic", "inorganics", SK_ALCHEMY, 0},
     {SKILL_TOOL, "skill tool", "skill tools", 0, 0},
     {LIGHTER, "lighter", "lighters", 0, 0},
-    {TRAP_PART, "trap part", "trap parts", 0, 0},
     {WALL, "wall", "walls", 0, 0},
-    {LIGHT_SOURCE, "light source", "light sources", 0, 0},
     {MISC_OBJECT, "bric-a-brac", "bric-a-brac", 0, 0},
     {MONSTER, "monster", "monsters", 0, 0},
-    {SPAWN_GENERATOR, "monster generator", "monster generators", 0, 0},
     {LAMP, "lamp", "lamps", 0, 0},
     {DUPLICATOR, "duplicator", "duplicators", 0, 0},
     {TOOL, "tool", "tools", 0, 0},
     {SPELLBOOK, "spellbook", "spellbooks", SK_LITERACY, 0},
-    {BUILDFAC, "building facility", "building facilities", 0, 0},
     {CLOAK, "cloak", "cloaks", SK_SMITHERY, 0},
     {SPINNER, "spinner", "spinners", 0, 0},
     {GATE, "gate", "gates", 0, 0},
@@ -208,8 +203,6 @@ static const typedata item_types[] = {
     {BRACERS, "bracers", "bracers", SK_SMITHERY, 0},
     {POISONING, "poisoning", "poisonings", 0, 0},
     {SAVEBED, "savebed", "savebeds", 0, 0},
-    {POISONCLOUD, "poison cloud", "poison clouds", 0, 0},
-    {FIREHOLES, "fireholes", "fireholes", 0, 0},
     {WAND, "wand", "wands", SK_THAUMATURGY, 0},
     {SCROLL, "scroll", "scrolls", SK_LITERACY, 0},
     {DIRECTOR, "director", "directors", 0, 0},
