@@ -858,7 +858,6 @@ static void initConstants(PyObject* module)
         { "PEACEMAKER", PEACEMAKER },
         { "GEM", GEM },
         { "FIREWALL", FIREWALL },
-        { "ANVIL", ANVIL },
         { "CHECK_INV", CHECK_INV },
         { "MOOD_FLOOR", MOOD_FLOOR },
         { "EXIT", EXIT },
@@ -871,17 +870,13 @@ static void initConstants(PyObject* module)
         { "INORGANIC", INORGANIC },
         { "SKILL_TOOL", SKILL_TOOL },
         { "LIGHTER", LIGHTER },
-        { "TRAP_PART", TRAP_PART },
         { "WALL", WALL },
-        { "LIGHT_SOURCE", LIGHT_SOURCE },
         { "MISC_OBJECT", MISC_OBJECT },
         { "MONSTER", MONSTER },
-        { "SPAWN_GENERATOR", SPAWN_GENERATOR },
         { "LAMP", LAMP },
         { "DUPLICATOR", DUPLICATOR },
         { "TOOL", TOOL },
         { "SPELLBOOK", SPELLBOOK },
-        { "BUILDFAC", BUILDFAC },
         { "CLOAK", CLOAK },
         { "SPINNER", SPINNER },
         { "GATE", GATE },
@@ -898,8 +893,6 @@ static void initConstants(PyObject* module)
         { "BRACERS", BRACERS },
         { "POISONING", POISONING },
         { "SAVEBED", SAVEBED },
-        { "POISONCLOUD", POISONCLOUD },
-        { "FIREHOLES", FIREHOLES },
         { "WAND", WAND },
         { "SCROLL", SCROLL },
         { "DIRECTOR", DIRECTOR },
