@@ -15,6 +15,12 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Remove obsolete object types.
+ common/item.c
+ include/define.h
+ plugins/python/cfpython.c
+Nicolas Weeger 2007-05-08
+
 server/alchemy.c: Doxygen documentation, no functional change.
 Nicolas Weeger 2007-05-08
 
